# dvda-csharp

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
config/: app.conf
src/: adminwindow.cpp  adminwindow.h  database_setup.cpp  database_setup.h  dbaccess.cpp  dbaccess.h  dvda_helper.cpp  dvda_helper.h  insecure_logger.cpp  insecure_logger.h  library_loader.cpp  library_loader.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  memory_vulnerabilities.cpp  memory_vulnerabilities.h  network_manager.cpp  network_manager.h  registerwindow.cpp  registerwindow.h  sessionmanager.cpp  sessionmanager.h
